[package]
name = "parsedown"
version = "1.4.3"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/rodneylab/parsedown"
# wasm-bindgen v.0.2.93 requires rust 1.76
rust-version = "1.85"
description = "Markdown processing"

[package.metadata.cargo-machete]
ignored = ["getrandom", "js-sys"]

[lib]
crate-type = ["cdylib"]

[dependencies]
aho-corasick = "1.1.4"
deunicode = "1.6.2"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
html5ever = "0.38.0"
js-sys = "0.3.82"
mrml = { version = "5.1.0", features = ["parse", "render"], default-features = false }
nom = { version = "8.0.0", features = ["alloc"] }
pulldown-cmark = "0.13.0"
pulldown-cmark-escape = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
textwrap = "0.16.2"
url = "2.5.8"
wasm-bindgen = { version = "=0.2.106", features = ["serde-serialize"] }

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"
